--- a/Angular/code/components2/src/app/books/books.component.html
+++ b/Angular/code/components2/src/app/books/books.component.html
@@ -1,4 +1,5 @@
 <div id="books">
+   <img src={{val2}} alt="iamge">
     <app-book [bookname]="book1" [bookimage]="src1"></app-book>
     <app-book [bookname]="book2" [bookimage]="src2"></app-book>
     <app-book [bookname]="book3" [bookimage]="src3"></app-book>
