--- a/Angular/code/viewChild/src/app/parent/parent.component.html
+++ b/Angular/code/viewChild/src/app/parent/parent.component.html
@@ -1,3 +1,7 @@
-<p>{{count.c}}</p>
-<p>{{count.name}}</p>
-<app-child></app-child>
+<p>{{chitti.c}}</p>
+<p>{{chitti.name}}</p>
+<p>HEllo world</p>
+<input type="text" #inp value="prasad">
+{{inp.value}}
+<button (click)="callChild()">call child</button>
+<app-child #chitti></app-child>
