--- a/Angular/code/portfolio/src/app/header/header.component.html
+++ b/Angular/code/portfolio/src/app/header/header.component.html
@@ -9,5 +9,6 @@
             <li><a routerLink="/projects">Projects</a></li>
             <li><a routerLink="/contact">Contact</a></li>
         </ul>
+        <button><a routerLink="/login">login</a></button>
     </div>
 </header>
