--- a/Angular/code/portfolio/src/app/header/header.component.css
+++ b/Angular/code/portfolio/src/app/header/header.component.css
@@ -19,6 +19,19 @@ li{
     list-style-type: none;
 margin: 0px 10px;
 }
+.menu{
+    display: flex;
+gap: 20px;
+}
+button{
+    padding: 10px;
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+}
+button a{
+color: black;
+}
 .menu a{
     font-size: 24px;
     color: white;
