--- a/Angular/main/src/styles.css
+++ b/Angular/main/src/styles.css
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*{
+    margin:0px;
+    padding: 0px;
+    --primary:tomato;
+    --secondary: black;
+}
