--- a/Angular/main/src/app/components/header/header.component.html
+++ b/Angular/main/src/app/components/header/header.component.html
@@ -10,5 +10,6 @@
             <li><a routerLink="./Contact">Contact</a></li>
         </ul>
         <button mat-flat-button>Login</button>
+        <p>{{count}}</p>
     </nav>
 </header>
