--- a/Angular/main/src/app/components/products/products.component.html
+++ b/Angular/main/src/app/components/products/products.component.html
@@ -14,6 +14,7 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-flat-button (click)="goProduct(p.id)">Learn more</button>
+            <button mat-flat-button (click)="cartAdd(p)">AddCart</button>
         </mat-card-actions>
     </mat-card>
 </div>
