--- a/Angular/main/src/app/components/header/header.component.html
+++ b/Angular/main/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
             <li><a routerLink="./products">Products</a></li>
             <li><a routerLink="./Contact">Contact</a></li>
         </ul>
-        <button mat-flat-button>Login</button>
-        <p>{{count}}</p>
+        <button mat-flat-button><a routerLink="/login">Login</a></button>
+       <button mat-flat-button><a routerLink="/cart">Cart: <span>{{count}}</span></a></button>
     </nav>
 </header>
