--- a/Angular/main/src/app/components/header/header.component.css
+++ b/Angular/main/src/app/components/header/header.component.css
@@ -6,6 +6,9 @@ header{
     color: white;
     padding: 10px 20px;
     font-size: 16px;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
 }
 .logo span{
     color: var(--primary);
